<resources>
    <string name="app_name">Biology Trivia</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="share_body_text">share</string>
    <string name="text_plain_intent_type">share</string>
    <string name="general_today_s_tasks">Today\'s Tasks</string>
    <string name="general_profile">Profile</string>
    <string name="general_achievements">Achievements</string>
    <string name="general_learn">Learn</string>
    <string name="general_settings">Settings</string>
    <string name="general_help_and_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="general_question_thumbnail">Question Thumbnail</string>
    <string name="general_unlock">unlock</string>
    <string name="level1">Introduction</string>
    <string name="level2">Genetics</string>
    <string name="general_get_free_coins">click to get free coins</string>
    <string name="general_your_remaing_coins">Your remaining coins</string>
    <string name="general_your_available_keys">Your available keys</string>
    <string name="general_unlock_question">unlock_question</string>
    <string name="general_level_lable">level lable</string>
    <string name="general_level_unlock_status">level unlock status</string>
    <string name="general_get_free_coins_text">Get FREE coins</string>
    <string name="promo_text">Promo</string>
    <string name="general_company_name">A Plus Apps</string>
    <string name="general_home">Home</string>
    <string name="general_question">question</string>
    <string name="general_error_unable_to_load_question">Unable to load question as this time.</string>
    <string name="sample_progress_title">Progress 20% | Master</string>
    <string name="sample_answer_a">Choose this answer</string>
    <string name="sample_answer_b">OR choose this answer</string>
    <string name="sample_answer_c">OR this answer</string>
    <string name="sample_answer_d">OR all these answers</string>
    <string name="sample_question_number">5/10</string>
    <string name="sample_timer_display">00:00</string>
    <string name="sample_question">Which country is this landmark located in ?</string>
    <string name="sample_level_title">Level 1</string>
    <string name="sample_number_of_coins">5,000 coins</string>
    <string name="sample_number_of_keys">50 Keys</string>
    <string name="level_one_questions_number">3</string>
    <string name="level_two_questions_number">10</string>
    <string name="level_three_questions_number">5</string>
    <string name="level_four_questions_number">13</string>
    <string name="level_five_questions_number">7</string>
    <string name="level_six_questions_number">8</string>
    <string name="level_seven_questions_number">2</string>
    <string name="level_eight_questions_number">11</string>
    <string name="level_nine_questions_number">5</string>
    <string name="level_ten_questions_number">7</string>
    <string name="level_one_question_one">Which of the following is true?</string>
    <string name="level_one_question_two">Select the correct statement</string>
    <string name="level_one_question_three">What is the study of cells?</string>
    <string name="level_one_question_four">What is Biology?</string>
    <string name="level_one_question_five">Which of the following defines Amoeba?</string>
    <string name="level_one_question_one_option_one">Biology is the study of chemicals.</string>
    <string name="level_one_question_one_option_two">Biology is the study of human beings.</string>
    <string name="level_one_question_one_option_three">Biology is the study of life.</string>
    <string name="level_one_question_one_option_four">Biology is the study of plants.</string>
    <string name="level_one_question_two_option_one">Cytology is the study if cells</string>
    <string name="level_one_question_two_option_two">Red blood cells supplies oxygen to the body</string>
    <string name="level_one_question_two_option_three">White blood cells prevent diseases</string>
    <string name="level_one_question_two_option_four">Plasm is the content found in red blood cells</string>
    <string name="level_one_question_three_option_one">Biology is the study of chemicals.</string>
    <string name="level_one_question_three_option_two">Biology is the study of human beings.</string>
    <string name="level_one_question_three_option_three">Biology is the study of life.</string>
    <string name="level_one_question_three_option_four">Biology is the study of plants.</string>
    <string name="level_one_question_one_answer">C</string>
    <string name="level_one_question_two_answer">A</string>
    <string name="level_one_question_three_answer">C</string>
    <string name="level_two_question_one">Proteins destined to be secreted move through the secretory pathway in which of the following orders ?</string>
    <string name="level_two_question_two">Stabilization of the unique coiled structure of an alpha helix in a protein is primarily attributed to</string>
    <string name="level_two_question_three">A DNA strand with the sequence 5\' CGA TTG 3\' would be complementary to the sequence </string>
    <string name="level_two_question_four">A cell nucleus contains of the following ?</string>
    <string name="level_two_question_five">Which of the following best explains how mutations in DNA can result in the expression of new phenotype ?</string>
    <string name="level_two_question_six">Which of the following techniques could be used to demonstrate protein binding to specific DNA sequences ?</string>
    <string name="level_two_question_seven">Which of the following best explains why enzymes are effective in facilitating chemical reactions ?</string>
    <string name="level_two_question_eight">Targeting of newly synthesized proteins is most likely to require two different signal peptides for which of the following destinations ?</string>
    <string name="level_two_question_nine">Approximately what fraction of the human genome encodes proteins ?</string>
    <string name="level_two_question_ten">Which of the following contains DNA sequences required for the segregation of chromosomes in mitosis and meiosis ?</string>
    <string name="level_two_question_one_option_one">Smooth ER -> Golgi transport vesicle -> Golgi cistenae -> secretory vesicle -> cell surface</string>
    <string name="level_two_question_one_option_two">Rough ER -> Golgi tranport vesicle -> Golgi cisternae -> secretory vesicle -> cell surface</string>
    <string name="level_two_question_one_option_three">Golgi cisternae -> ER transport vesicle -> smooth ER -> secretory vesicle -> cell surface</string>
    <string name="level_two_question_one_option_four">Rough ER -> smooth ER -> Golgi transport vesicle -> Golgi cisternae -> secretory vesicle -> cell surface</string>
    <string name="level_two_question_two_option_one">hydrogen bonding between the peptide backbone atoms</string>
    <string name="level_two_question_two_option_two">disulfide bridges between cysteine side cahins</string>
    <string name="level_two_question_two_option_three">carbohydrate moieties between cyteine side cahins</string>
    <string name="level_two_question_two_option_four">peptide linkage that covalent bond amino acids</string>
    <string name="level_two_question_three_option_one">hydrogen bonding between the peptide backbone atoms</string>
    <string name="level_two_question_three_option_two">disulfide bridges between cysteine side cahins</string>
    <string name="level_two_question_three_option_three">carbohydrate moieties between cyteine side cahins</string>
    <string name="level_two_question_three_option_four">peptide linkage that covalent bond amino acids</string>
    <string name="level_two_question_four_option_one">DNA only</string>
    <string name="level_two_question_four_option_two">Protein only</string>
    <string name="level_two_question_four_option_three">RNA only</string>
    <string name="level_two_question_four_option_four">DNA, Protein and RNA</string>
    <string name="level_two_question_five_option_one">A different polypeptide is produced.</string>
    <string name="level_two_question_five_option_two">The polarity of tRNA becomes the opposte of that of DNA</string>
    <string name="level_two_question_five_option_three">Nucleic acids are methylated.</string>
    <string name="level_two_question_five_option_four">Eukaryotes and prokaryotes have similar ribosomes.</string>
    <string name="level_two_question_six_option_one">Western blot hybridization</string>
    <string name="level_two_question_six_option_two">Northern blot hybridization</string>
    <string name="level_two_question_six_option_three">Southern blot hybridation</string>
    <string name="level_two_question_six_option_four">Electrophoretic mobility shift assay</string>
    <string name="level_two_question_seven_option_one">They raise the temperature of the reaction mixture, thereby speeding up the conversion of reactants to products.</string>
    <string name="level_two_question_seven_option_two">They alter the equilibrium constant of a reaction(<i><b>K<sub>aq</sub></b></i></string>
    <string name="level_two_question_seven_option_three">They increase the maximal rate of the chemical reaction (<b><i>V</i><sub>eq</sub></b>)</string>
    <string name="level_two_question_seven_option_four">They lower the activation energy, thereby speeding up the conversion of reactants to products.</string>
    <string name="level_two_question_eight_option_one">Plasma membrane</string>
    <string name="level_two_question_eight_option_two">Lysosome</string>
    <string name="level_two_question_eight_option_three">Cytosol</string>
    <string name="level_two_question_eight_option_four">Chloroplast</string>
    <string name="level_two_question_nine_option_one">2%%</string>
    <string name="level_two_question_nine_option_two">25%%</string>
    <string name="level_two_question_nine_option_three">50%%</string>
    <string name="level_two_question_nine_option_four">90%%</string>
    <string name="level_two_question_ten_option_one">Telomeres</string>
    <string name="level_two_question_ten_option_two">Centromeres</string>
    <string name="level_two_question_ten_option_three">Nucleosomes</string>
    <string name="level_two_question_ten_option_four">Spliceosomes</string>
    <string name="level_three_question_one">Which of the following sets of reactions occurs in the stroma of the chloroplast in plant cells ?</string>
    <string name="level_three_question_two">Which of the following is typically NOT found in normal sematic cells of a human male ?</string>
    <string name="level_three_question_three">Which of the following most accurately describes a retrotransposon ?</string>
    <string name="level_three_question_one_option_one">Calvin cycle</string>
    <string name="level_three_question_one_option_two">Krebs cycle</string>
    <string name="level_three_question_one_option_three">Fermentation</string>
    <string name="level_three_question_one_option_four">Decarboxylation</string>
    <string name="level_three_question_two_option_one">The entire genetic information possessed by the origin zygote</string>
    <string name="level_three_question_two_option_two">An inactivated X chromosome</string>
    <string name="level_three_question_two_option_three">Forty-four autosome</string>
    <string name="level_three_question_two_option_four">A diploid nucleus</string>
    <string name="level_three_question_three_option_one">A DNA sequences that can move from one site in the genome to another without replicating</string>
    <string name="level_three_question_three_option_two">A DNA sequence that can be deleted from the genome without consequence</string>
    <string name="general_pause_dialog_message_text">Cross the finish line first !</string>
    <string name="general_pause_negative_response">Give up</string>
    <string name="general_positive_pause_response">Resume</string>
</resources>