<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/level_title_cardview"
    android:layout_height="130dp"
    android:layout_width="190dp"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    cardview:cardCornerRadius="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:padding="2dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/level_image_view"
            android:background="@android:color/holo_blue_light"
            android:src="@drawable/ic_action_label_complete"
            android:contentDescription="@string/general_level_lable"
            android:scaleType="center"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/level_name_textview"
                android:text="@string/sample_level_title"
                android:textSize="21sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/level_complete_status"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="2dp"
                android:contentDescription="@string/general_level_unlock_status"
                android:src="@drawable/ic_action_level_unlock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>



    </LinearLayout>

</android.support.v7.widget.CardView>